Changed font for pokemon names and id

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ body {
 
 /* Pokemon ID Styles */
 .pokemon-id {
+    font-family: Helvetica, sans-serif; /* Fallback to sans-serif if Helvetica is not available */
     position: absolute; /* Position the ID absolutely within the card */
     top: 13px; /* Distance from the top */
     right: 10px; /* Distance from the right */
@@ -127,6 +128,7 @@ body {
 
 /* Pokemon Name Styles */
 .pokemon-name {
+    font-family: Helvetica, sans-serif; /* Fallback to sans-serif if Helvetica is not available */
     position: absolute; /* Position the name absolutely within the card */
     top: 13px; /* Distance from the top */
     left: 15px; /* Distance from the left */
